# vk-imgui-template-project

./: .gitmodules  CMakeLists.txt  JetBrains_StyleFormat.xml  README.md  conanfile.py
.github/workflows/: cmake-build.yml
Source/: CMakeLists.txt
Source/Application/: CMakeLists.txt
Source/Application/Source/Private/: Main.cpp
Source/UserInterface/: CMakeLists.txt
Source/UserInterface/Source/Private/: AppLibrary.cxx  AppMainView.cxx  AppWin32ParentingHelper.cxx  AppWindow.cxx
Source/UserInterface/Source/Public/: AppLibrary.ixx  AppMainView.ixx  AppWin32ParentingHelper.ixx  AppWindow.ixx  UserInterfaceModule.hpp
